Chapter 15 Appendix/Pod-AppArmor.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-apparmor
spec:
  securityContext:
    appArmorProfile:
      type: Localhost
      localhostProfile: k8s-apparmor-example-deny-write
  containers:
    - name: container-apparmor
      image: busybox:1.28
      command: ["sh", "-c", "echo 'Hello AppArmor!' && sleep 1h"]
