Chapter 15 Appendix/SeLinuxPod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: selinux-pod
spec:
  securityContext:
    seLinuxOptions:
      level: s0:c10,c0
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
        - name: vol
          mountPath: /tmp/test
  volumes:
    - name: selinux-volume
      persistentVolumeClaim:
        claimName: selinux-claim
