Chapter 15 Appendix/sa-test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sa-test-pod
  namespace: packt
spec:
  serviceAccountName: sa-test-with-projected-token
  containers:
    - name: sa-test-container
      image: sa-test-image
      volumeMounts:
        - name: sa-test-token
          mountPath: /var/run/secrets/tokens
          readOnly: true
  volumes:
    - name: sa-test-token
      projected:
        sources:
          - serviceAccountToken:
              path: token
              expirationSeconds: 3600
              audience: "api"
