Chapter 15 Appendix/secret-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-pod
spec:
  containers:
    - name: secret-container
      image: secret-image
      imagePullPolicy: IfNotPresent
  imagePullSecrets:
    - name: my-secret
