Chapter 15 Appendix/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  hostUsers: false
  containers:
    - name: test-container
      image: nginx
      command: ["sleep"]
