Chapter 15 Appendix/WebhookPolicy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
# ... other fields such as metadata, webhooks, etc.
rules:
  - operations:
      - CREATE
      - UPDATE
    apiGroups: ["*"]
    apiVersions: ["*"]
    resources: ["*"]
    matchConditions:
      - name: "exclude-kubelet-requests"
        expression: '!("system:nodes" in request.userInfo.groups)'
